testsuite/tests/rename/should_fail/T25984b.hs
module T25984b where

import Prelude hiding (Bool(True,X))

t = True
